# PRT-OTP-Analysis

./: .gitattributes  .gitignore  ANALYSIS-PROPOSAL.md  CLAUDE.md  CONTRIBUTING.md  EXECUTIVE-SUMMARY.md  FINDINGS.md  NOTES.md  QUESTIONS.md  README.md  pyproject.toml  scaffold.py  scaffold.toml
.claude/: settings.local.json
RED-TEAM-REPORTS/: 2026-02-10-analyses-12-18.md  2026-02-10-analysis-06-seasonal-patterns.md  2026-02-11-analyses-01-05-07-11.md  README.md
analyses/: README.md
analyses/01_system_trend/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/02_mode_comparison/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/03_route_ranking/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/04_neighborhood_equity/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/05_anomaly_investigation/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/06_seasonal_patterns/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/07_stop_count_vs_otp/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/08_hotspot_map/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/09_incline_investigation/: FINDINGS.md  METHODS.md  README.md  main.py
analyses/10_frequency_vs_otp/: FINDINGS.md  METHODS.md  README.md  main.py
data/: DATA_DICTIONARY.md  PRT_Current_Routes_Full_System_de0e48fcbed24ebc8b0d933e47b56682.csv  PRT_Stop_Reference_Lookup_Table.csv  README.md  prt.db  routes_by_month.csv
docs/: ADDITIONAL_DATA_REQUESTS.md  METHODOLOGY-ISSUES.md  README.md  RED-TEAM.md  SOURCES.md
report/: README.md  build_report.py
src/: README.md
(+148 files in other folders)
